write checkbox, parse error/valid styles in inputs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <div id="root-modal"></div>
+    <div id="root-docs"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
