--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-status.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Advokato</title>
+    <meta
+      name="description"
+      content="Адвокатська компанія «STATUS». Ми допомагаємо приватним клієнтам, державним компаніям, малому і великому бізнесу вирішувати юридичні питання будь-якої складності. Ми допомагаємо передбачати необхідні зміни і уникати таким чином складних ситуацій в майбутньому."
+    />
+    <title>Status</title>
   </head>
   <body>
     <div id="root"></div>
